# rust-aarch64

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/instructions/: address_translation.rs  cache_maintenance.rs  mod.rs  predictor_maintenance.rs  tlb_maintenance.rs
src/registers/: accdata_el1.rs  actlr_el1.rs  actlr_el2.rs  actlr_el3.rs  afsr0_el1.rs  afsr0_el2.rs  afsr0_el3.rs  afsr1_el1.rs  afsr1_el2.rs  afsr1_el3.rs  aidr_el1.rs  amair_el1.rs  amair_el2.rs  amair_el3.rs  amcfgr_el0.rs  amcg1idr_el0.rs  amcgcr_el0.rs  amcntenclr0_el0.rs  amcntenclr1_el0.rs  amcntenset0_el0.rs  amcntenset1_el0.rs  amcr_el0.rs  amuserenr_el0.rs  apdakeyhi_el1.rs  apdakeylo_el1.rs  apdbkeyhi_el1.rs  apdbkeylo_el1.rs  apgakeyhi_el1.rs  apgakeylo_el1.rs  apiakeyhi_el1.rs  apiakeylo_el1.rs  apibkeyhi_el1.rs  apibkeylo_el1.rs  ccsidr2_el1.rs  ccsidr_el1.rs  clidr_el1.rs  cntfrq_el0.rs  cnthctl_el2.rs  cnthp_ctl_el2.rs  cnthp_cval_el2.rs  (+305 more)
tools/: armsysregxml.py  config.json  generate.py  rustcode.py  utils.py
